# Global-Game-Jam

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  characters.json  cmake_install.cmake  dialogue  game.hpp  json  louis.json  main.cpp  nadia.json  scenario
include/: Animation.hpp  TextBox.hpp  game.hpp  include.hpp  notebook.hpp  notebooktext.hpp  player.hpp  text.hpp  window.hpp
ressources/: agathe.json  carlos.json  catherine.json  characters.json  diego.json  elize.json  james.json  julia.json  louis.json  maria.json  nadia.json  narrator.json  notebook.json  pablo.json  sebastian.json  victor.json
src/: Animation.cpp  TextBox.cpp  conver.cpp  dialog.cpp  game.cpp  main.cpp  notebook.cpp  notebooktext.cpp  player.cpp  window.cpp
src/buttons/: diaryButton.cpp  goBackButton.cpp  playButton.cpp  treeButton.cpp
src/screens/: dialogScreen.cpp  menuScreen.cpp
src/utils/: createText.cpp  initRectangleShape.cpp  split.cpp
